# sldshow2

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_UPDATE_DRAFT.md  GEMINI.md  LICENSE  README.md  SECURITY.md  build.rs  example.sldshow  installer.nsi
.agent-worktrees/: README.md
.claude/agents/: guild-quest-receptionist.md  issue-raid-commander.md  issue-ranger.md  issue-slayer.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/dispatching-guild-expedition/: SKILL.md
.claude/skills/guild-quest-receptionist/: SKILL.md
.claude/skills/issue-raid-commander/: SKILL.md
.claude/skills/issue-ranger/: APPROVAL.md  ENV.md  RECON.md  SKILL.md  TEMPLATE.md
.claude/skills/issue-slayer/: ENV.md  SKILL.md  VERIFY.md  WORKTREE.md
.claude/skills/quality-finisher/: ENV.md  SKILL.md
.claude/skills/ultimate-issue-slayer/: SKILL.md
.claude/skills/verify-sprint/: SKILL.md
.claude/skills/worktree-manager/: SKILL.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/shaders/: hdr_ui_composite.wgsl  transition.wgsl
docs/: AGENTS.md  AI_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  DESIGN_GUIDELINES.md  QUICK_START.md
docs/superpowers/plans/: 2026-05-17-design-guidelines.md
docs/superpowers/specs/: 2026-05-17-overlay-design-guidelines-design.md
examples/: check_font_name.rs  generate_test_images.rs
setup/: sldshow2.nsi
src/: app.rs  clipboard.rs  color_adjust.rs  config.rs  consts.rs  diagnostics.rs  drag_drop.rs  error.rs  hdr_ui_composite.rs  image_loader.rs  input.rs  lib.rs  main.rs  metadata.rs  osc.rs  overlay.rs  renderer.rs  resize_hook.rs  screenshot.rs  slideshow.rs  text.rs  thumbnail.rs  timer.rs  transition.rs  ui.rs  watcher.rs
src/image_loader/: decode.rs  exif.rs  mod.rs  scan.rs
src/overlay/: gallery.rs  help.rs  mod.rs  settings.rs
tests/gpu/: helpers.rs  transition_invariants.rs
