[package]
name = "sldshow2"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["ugai"]
description = "Simple slideshow image viewer with custom WGSL transitions"
license = "MIT"
repository = "https://github.com/ugai/sldshow2"
homepage = "https://github.com/ugai/sldshow2"

[dependencies]
# Graphics & Windowing
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
glyphon = "0.5" # Text rendering


# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Image processing
image = "0.25"

# Utilities
anyhow = "1.0"
rand = "0.8"
alphanumeric-sort = "1.5"
dirs = "5.0"

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "2.0"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Parallel computation
rayon = "1.10"

# File watching for hot-reload
notify = "7.0"
notify-debouncer-full = "0.4"

# Multi-format config
serde_json = "1.0"
serde_yaml = "0.9"

# Image metadata
kamadak-exif = "0.5"

# UTF-8 path handling
camino = { version = "1.1", features = ["serde1"] }

# Clipboard support
arboard = "3.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Power",
    "Win32_Foundation",
] }

# Optimize for fast compile times in dev
[profile.dev]
opt-level = 1

# Optimize for performance in release
[profile.release]
lto = true
codegen-units = 1

# Development profile with release-level optimization but faster compilation.
# Use for manual testing: cargo build --profile dev-release
[profile.dev-release]
inherits = "release"
debug = true
lto = false

# Fast compile for dev with some optimizations for Bevy
[profile.dev.package."*"]
opt-level = 3
