[package]
name = "sldshow2"
version = "0.3.0"
edition = "2024"
default-run = "sldshow2"
rust-version = "1.88"
authors = ["ugai"]
description = "Simple slideshow image viewer with custom WGSL transitions"
license = "MIT"
repository = "https://github.com/ugai/sldshow2"
homepage = "https://github.com/ugai/sldshow2"

[dependencies]
# Graphics & Windowing
winit = "0.30"
wgpu = "27"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"


# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Image processing
image = { version = "0.25", features = ["exr"] }
exr = "1.72"

# Utilities
anyhow = "1.0"
rand = "0.9"
alphanumeric-sort = "1.5"
dirs = "5.0"

# Error handling
thiserror = "2.0"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Parallel computation
rayon = "1.10"
# LRU cache
lru = "0.16"
# UTF-8 path handling
camino = { version = "1.1", features = ["serde1"] }

# Clipboard support
arboard = "3.4"

kamadak-exif = "0.6.1"
font-loader = "0.11.0"
egui-phosphor = "0.11"
fast_image_resize = "5.1.4"
half = "2"

[[test]]
name = "gpu_transition_invariants"
path = "tests/gpu/transition_invariants.rs"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Power",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_UI_Shell",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Optimize for fast compile times in dev
[profile.dev]
opt-level = 1

# Optimize for performance in release
[profile.release]
lto = true
codegen-units = 1

# Development profile with release-level optimization but faster compilation.
# Use for manual testing: cargo build --profile dev-release
[profile.dev-release]
inherits = "release"
debug = true
lto = false

# Fast compile for dev with some optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
